<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@android:color/white">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="16dp"
            android:src="@drawable/hackle_banner" />

        <ImageView
            android:id="@+id/hackle_ue_iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginRight="4dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:src="@drawable/hackle_cancel" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hackle_label_user"
            android:textColor="@android:color/black"
            android:textSize="16dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hackle_label_id"
                android:textColor="@android:color/black"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/hackle_ue_tv_default_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="8dp"
                android:layout_toLeftOf="@id/hackle_ue_btn_copy_default_id"
                android:singleLine="true"
                android:text="@string/hackle_label_not_avail"
                android:textColor="@android:color/darker_gray"
                android:textSize="14dp" />

            <Button
                android:id="@+id/hackle_ue_btn_copy_default_id"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:background="@drawable/hackle_button_bg"
                android:gravity="center"
                android:text="@string/hackle_label_copy"
                android:textColor="@android:color/darker_gray" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hackle_label_device_id"
                android:textColor="@android:color/black"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/hackle_ue_tv_device_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="8dp"
                android:layout_toLeftOf="@id/hackle_ue_btn_copy_device_id"
                android:singleLine="true"
                android:text="@string/hackle_label_not_avail"
                android:textColor="@android:color/darker_gray"
                android:textSize="14dp" />

            <Button
                android:id="@+id/hackle_ue_btn_copy_device_id"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:background="@drawable/hackle_button_bg"
                android:gravity="center"
                android:text="@string/hackle_label_copy"
                android:textColor="@android:color/darker_gray" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hackle_label_user_id"
                android:textColor="@android:color/black"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/hackle_ue_tv_user_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="8dp"
                android:layout_toLeftOf="@id/hackle_ue_btn_copy_user_id"
                android:singleLine="true"
                android:text="@string/hackle_label_not_avail"
                android:textColor="@android:color/darker_gray"
                android:textSize="14dp" />

            <Button
                android:id="@+id/hackle_ue_btn_copy_user_id"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:background="@drawable/hackle_button_bg"
                android:gravity="center"
                android:text="@string/hackle_label_copy"
                android:textColor="@android:color/darker_gray" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
